--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13241762.md#1" title="【名家专栏】中共经济胁迫的豪赌正在失败""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13241778-Gardner_china_coercion-1200x800-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13242771.md#1" title="【独家】文件泄河南迫害法轮功的轨迹""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/07/id13094510-9ED1714-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://jtmmat3416.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245484.md#1">DAFOH主任：中共活摘器官行径可输出到他国</a><br>
-:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245479.md#1">香港选举可投票者不足5千 钟剑华：非真正选举</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245040.md#1">中共再禁台水果 立委：反倒让台湾人同仇敌忾</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244300.md#1">中国留学生加拿大发推 中共网警跨海威胁</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245311.md#1">美国务院证实 又有三十多美国人撤离阿富汗</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243656.md#1">肯尼亚野生动物保护区中最年长的狮子</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245484.md#1">DAFOH主任：中共活摘器官行径可输出到他国</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245479.md#1">香港选举可投票者不足5千 钟剑华：非真正选举</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245040.md#1">中共再禁台水果 立委：反倒让台湾人同仇敌忾</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244300.md#1">中国留学生加拿大发推 中共网警跨海威胁</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245311.md#1">美国务院证实 又有三十多美国人撤离阿富汗</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243656.md#1">肯尼亚野生动物保护区中最年长的狮子</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13242870.md#1">消息：李嘉诚再次出售大陆地产项目</a><br>
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13242418.md#1">【拍案惊奇】华尔街大佬进京救火？许家印两出路</a><br>
@@ -78,7 +78,7 @@
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13239202.md#1">陆媒披露江苏警官策划“对领导人不轨”</a><br>
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13239588.md#1">恒大危机持续 大陆房地产股集体暴跌</a><br>
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13239197.md#1">美英澳核潜艇协议重塑印太格局 剑指中共</a><br>
-<a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13238714.md#1">欧议会通过对华新战略 谴责中共侵犯人权</a><br>
+<a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13238714.md#1">欧议会通过对华新战略 重视人权和国际规范</a><br>
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13238703.md#1">【十字路口】恒大万亿债务危机 或引爆金融海啸</a><br>
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13239022.md#1">【微视频】中国煤价新高 电费要大涨 冬天难熬</a><br>
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/16/n13238684.md#1">官方救不救恒大？大陆投行人士析风暴来临</a><br>
@@ -98,7 +98,7 @@
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/15/n13236589.md#1">遭封杀20天后 赵薇首次现身家乡安徽芜湖</a><br>
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/15/n13236184.md#1">各地老兵在北京中央军委维权 137人被抓</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/Domenicgyt/vd9p/raw/master/public/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/Domenicthks/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/Dominickdfw/vdtzrs/raw/master/public/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/Dirkgj9/vdC1WZ_mj/raw/master/public/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/Diondarh/vdqh/raw/master/public/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://220.136.147.132/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 53,013</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://1.170.51.85/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 53,013</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
@@ -106,12 +106,12 @@
 !共 383,808,237 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245484.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/06/Screen-Shot-2018-05-31-at-3.43.30-PM-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245484.md#1">DAFOH主任：中共活摘器官行径可输出到他国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243972.md#1">用人权换气候合作？美议员忧拜登政府会让步</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243241.md#1">创建“铁路工人节” 火车司机李伟杰遭打压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241660.md#1">余文生律师妻子许艳被禁出门 吁外界关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241453.md#1">巴中监狱称探视系统升级 不许黄琦母亲会见儿子</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240672.md#1">重庆访民向中央督导组伸冤遭抓捕</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245257.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13227064-5-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245257.md#1">恒大财富公告“实物兑付” 投资者担忧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243308.md#1">高房价惹祸？出生率第一的深圳人不愿生育了</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242789.md#1">流水线空无一人 莆田鞋业遭疫情重创</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13242539.md#1">【一线采访】恒大财富顾问质疑官方监管失职</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240806.md#1">分析：恒大并非“大到不能倒”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240953.md#1">四川泸县强震 泸州酒企200余吨白酒泄漏</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245401.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13050312-7be0ed7e4faf55601229d61bb0cc739a@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245401.md#1">中共再禁两种台湾水果 台拟诉诸世贸组织</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245262.md#1">不满杜特蒂亲共 菲律宾拳王宣布角逐总统</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243606.md#1">上海原副市长兼公安局长龚道安受贿 当庭认罪</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13244109.md#1">如间谍小说 美英澳核潜艇协议达成细节曝光</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13244181.md#1">美台四大举措可对中共攻台进行威慑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13244023.md#1">中共申请加入CPTPP 澳洲：先撤销报复性关税</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244852.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13235684-GettyImages-1235242848-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244852.md#1">【一线采访】厦门六家医疗机构停诊 民间恐慌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243430.md#1">福建Delta疫情传4市 流出人口逾14万人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242886.md#1">惠州一轿车撞路边摊档后起火 致6死13伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241331.md#1">北京一公交车撞上行人 致1死4伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240487.md#1">【一线采访】江西老妇被逼打疫苗后昏迷两次</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238433.md#1">【一线采访】四川泸县强震 村民：损失严重</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244915.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244915.md#1">河北一公司法人自杀获救 指衡水移动欠钱不给</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244420.md#1">三退声明精选（2021/09/18）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243423.md#1">吴迪团伙攫金6.5亿 石家庄8警察充当保护伞</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13237532.md#1">中国房价增速为八个月来最慢 专家谈背后原因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13237448.md#1">中国毒贩利用短视频发送贩毒暗号</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/15/n13236075.md#1">厦门疫情飙升下疫苗接种紧急喊停 民众担忧</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13239193-ef5a28e5d03aac6f152ead0fbb9ad82b-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1">新东方在线关闭K12业务 近四千教师面临失业</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/13/n13230258.md#1">【名家专栏】中共的“盾牌加长矛”战略</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/10/n13225377.md#1">胡歌：出道以来只为了证明自己是个演员</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/7/n13217362.md#1">中共禁老师校外补课 教唆学生举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205604.md#1">【一线采访】大陆培训机构倒闭 家长维权难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
-<tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/6/n13213741.md#1">双减冲击中国家庭：教育乱象 谁之过</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/6/n13213551.md#1">双减冲击中国家庭：减的是负担还是希望</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/8/24/n13183383.md#1">【独家】陕西“千人计划”名单曝光</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/1/n13203539.md#1">【独家】习思想进课堂 大学生首当其冲</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/8/26/n13188642.md#1">【独家】辽宁文件泄中共在网络领域抹黑西方</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/8/24/n13183636.md#1">【独家】文件泄辽宁收集在华韩国人活动轨迹</a><br>
+<tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240246.md#1">韩朝各射导弹 两岸军事专家怎么看</a><br>
+<a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/14/n13234584.md#1">【独家】习当局为何肃不清周永康的余毒</a><br>
+<a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/14/n13231700.md#1">中美角逐东南亚 专家点评谁会输</a><br>
+<a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/9/n13222817.md#1">【独家】文件泄河南公安隐形捞钱方式</a><br>
+<a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/6/n13214082.md#1">【内幕】文件泄河南商丘稳控访民名单</a><br>
+<a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/9/n13220489.md#1">【独家】讲真相活动 辽宁当局最惧怕</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/14/n13234395.md#1">草原女王：成吉思汗的监国公主阿剌海别吉</a><br>
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/2/n13204305.md#1">《普桑与神》Nicolas Poussin（上）</a><br>
 <a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/11/n13225731.md#1">乱世在劫妖魔出 张天师承命振天纲</a><br>
